# KinectFusionGPU

./: .gitignore  CMakeLists.txt  DataLoader.hpp  GPUProgramLoader.hpp  PointCloudGenerator.hpp  PoseEstimator.hpp  README.md  SurfaceMeasurement.hpp  SurfacePredictor.hpp  SurfaceReconstructor.hpp  Utils.h  main.cpp
opencl/: Defs.cl  PoseEstimator.cl  SurfaceMeasurement.cl  SurfacePredictor.cl  SurfaceReconstructor.cl  Utils.cl
